# BackdropAI-

./: .env  .gitignore  .replit  .vercelignore  DEPLOYMENT.md  DEPLOYMENT_SIMPLE.md  Procfile  README.md  README_NEW.md  README_UNIFIED.md  RENDER_DEPLOYMENT.md  SETUP.md  TROUBLESHOOTING.md  backend.py  deploy.sh  env.example  index.html  package-lock.json  package.json  postcss.config.js  pyproject.toml  remove_bg_server.py  render.yaml  requirements.txt  server.js  simple_server.py  tailwind.config.ts  test_backend.py  vercel.json  video_bg_remover.py  vite.config.ts
BackdropAI--main/src/components/: HeroSection.tsx
src/: App.tsx  config.ts  index.css  main.tsx
src/components/: FeaturesSection.tsx  Header.tsx  HeroSection.tsx  ThemeToggle.tsx
src/pages/: ApiSuccess.tsx  Index.tsx  Upload.tsx
