[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backdropai"
version = "0.1.0"
description = "AI-powered background removal tool"
requires-python = ">=3.8"
dependencies = [
    "Flask==2.2.5",
    "Flask-CORS==4.0.0",
    "requests==2.28.2",
    "gunicorn==20.1.0"
]

[tool.setuptools.packages.find]
where = ["."] 